--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% load i18n %}
+{% load humanize %}
+{% load persian_translation_tags %}
 
 {% block page_title %}
     cart detail
@@ -58,7 +60,7 @@
                                                     </td>
                                                     <td class="product-price">
                                                             <span class="product-price-wrapper">
-                                                                <span class="money">{{ item.product_obj.price }} {% trans '$' %}</span>
+                                                                <span class="money">{{ item.product_obj.price|intcomma:False|trans_to_persian }} {% trans '$' %}</span>
                                                             </span>
                                                     </td>
                                                     <td class="product-quantity">
@@ -81,7 +83,7 @@
                                                     </td>
                                                     <td class="product-total-price">
                                                             <span class="product-price-wrapper">
-                                                                <span class="money">{{ item.total_price }} {% trans '$' %}</span>
+                                                                <span class="money">{{ item.total_price|intcomma:False|trans_to_persian }} {% trans '$' %}</span>
                                                             </span>
                                                     </td>
                                                 </tr>
@@ -122,7 +124,7 @@
                                         </div>
                                         <div class="cart-calculator__item--value">
                                                 <span class="product-price-wrapper">
-                                                    <span class="money">{{ cart.get_total_price }} {% trans '$' %}</span>
+                                                    <span class="money">{{ cart.get_total_price|intcomma:False|trans_to_persian }} {% trans '$' %}</span>
                                                 </span>
                                         </div>
                                     </div>
