--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -4,6 +4,7 @@
 {% load i18n %}
 {% load jalali_tags %}
 {% load persian_translation_tags %}
+{% load humanize %}
 
 {% block page_title %}
     product detail
@@ -39,7 +40,7 @@
                                         {{ product.description|truncatewords:30 }}
                                     </p>
                                     <div class="my-5 py-5 product-price-wrapper mb--25">
-                                        <span class="money text-success">{{ product.price|trans_to_persian }} {% trans '$' %}</span>
+                                        <span class="money text-success">{{ product.price|intcomma:False|trans_to_persian }} {% trans '$' %}</span>
                                     </div>
                                     <div class="product-action d-flex align-items-sm-center align-content-center mb--30">
                                         <form action="{% url 'cart:cart_add' product.id %}" method="POST">
