--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -1,5 +1,8 @@
 {% extends '_base.html' %}
 {% load i18n %}
+{% load persian_translation_tags %}
+{% load humanize %}
+
 
 {% block page_title %}
     product list
@@ -55,10 +58,31 @@
                                                         <a href="{{ product.get_absolute_url }}">{{ product.title }}</a>
                                                     </h3>
                                                     <div class="product-price-wrapper mb--30">
-                                                        <span class="money text-success"> {{ product.price }} تومان</span>
+                                                        <span class="money text-success"> {{ product.price|intcomma:False|trans_to_persian }} {% trans '$' %}</span>
                                                     </div>
-                                                    <a href="cart.html"
-                                                       class="btn btn-small btn-bg-sand btn-color-dark px-3">{% trans 'add to cart' %}</a>
+                                                    <form action="{% url 'cart:cart_add' product.id %}" method="POST">
+                                                        {% csrf_token %}
+                                                        <div class="quantity-wrapper d-flex justify-content-start">
+                                                            <div class="quantity">
+                                                                <input type="number"
+                                                                       class="quantity-input"
+                                                                       name="quantity"
+                                                                       id="qty"
+                                                                       value="1"
+                                                                       min="1"
+                                                                       max="30"
+                                                                >
+                                                            </div>
+                                                        <button type="submit"
+                                                                class="btn btn-small btn-bg-red btn-color-white btn-hover-2">
+                                                            {% trans 'add to cart' %}
+                                                        </button>
+                                                        </div>
+                                                    </form>
+{#                                                    <form action="{% url 'cart:cart_add' product.id %}" method="POST">#}
+{#                                                        {% csrf_token %}#}
+{#                                                        <button class="btn btn-small btn-bg-sand btn-color-dark px-3">{% trans 'add to cart' %}></button>#}
+{#                                                    </form>#}
                                                 </div>
                                             </div>
                                         </div>
