--- a/orders/templates/orders/order_create.html
+++ b/orders/templates/orders/order_create.html
@@ -17,6 +17,8 @@
         {% endfor %}
     {% endif %}
 
+    {% trans 'order' as header_name %}
+    {% include 'topheader.html' with header_name=header_name %}
     <!-- Main Content Wrapper Start -->
     <div class="main-content-wrapper">
         <div class="page-content-inner">
@@ -29,7 +31,7 @@
                             <h2>جزئیات سفارش</h2>
                         </div>
                         <div class="checkout-form">
-                            <form action="#" method="POST" class="form form--checkout">
+                            <form action="" method="POST" class="form form--checkout">
                                 {% csrf_token %}
                                 <div class="form-row mb--20">
                                     <div class="form__group col-md-6 mb-sm--30">
@@ -37,19 +39,40 @@
                                                 class="required">*</span></label>
                                         <input type="text" name="first_name" id="billing_fname"
                                                class="form__input form__input--2">
+                                        {% if form.errors %}
+                                            {% for message in form.first_name.errors %}
+                                                <div class="alert alert-danger" role="alert">
+                                                    {{ message }}
+                                                </div>
+                                            {% endfor %}
+                                        {% endif %}
                                     </div>
                                     <div class="form__group col-md-6">
                                         <label for="billing_lname" class="form__label form__label--2">نام خانوادگی <span
                                                 class="required">*</span></label>
                                         <input type="text" name="last_name" id="billing_lname"
                                                class="form__input form__input--2">
+                                        {% if form.errors %}
+                                            {% for message in form.last_name.errors %}
+                                                <div class="alert alert-danger" role="alert">
+                                                    {{ message }}
+                                                </div>
+                                            {% endfor %}
+                                        {% endif %}
                                     </div>
                                 </div>
                                 <div class="form-row mb--20">
                                     <div class="form__group col-12">
-                                        <label for="billing_company" class="form__label form__label--2">آدرس</label>
-                                        <input type="text" name="address" id="billing_company"
+                                        <label for="billing_address" class="form__label form__label--2">آدرس</label>
+                                        <input type="text" name="address" id="billing_address"
                                                class="form__input form__input--2">
+                                       {% if form.errors %}
+                                            {% for message in form.address.errors %}
+                                                <div class="alert alert-danger" role="alert">
+                                                    {{ message }}
+                                                </div>
+                                            {% endfor %}
+                                        {% endif %}
                                     </div>
                                 </div>
                                 <div class="form-row mb--20">
@@ -58,6 +81,13 @@
                                                 class="required">*</span></label>
                                         <input type="text" name="phone_number" id="billing_phone"
                                                class="form__input form__input--2">
+                                        {% if form.errors %}
+                                            {% for message in form.phone_number.errors %}
+                                                <div class="alert alert-danger" role="alert">
+                                                    {{ message }}
+                                                </div>
+                                            {% endfor %}
+                                        {% endif %}
                                     </div>
                                 </div>
                                 <div class="form-row mb--20">
@@ -66,6 +96,13 @@
                                                 class="required">*</span></label>
                                         <input type="email" name="email" id="billing_email"
                                                class="form__input form__input--2">
+                                         {% if form.errors %}
+                                            {% for message in form.email.errors %}
+                                                <div class="alert alert-danger" role="alert">
+                                                    {{ message }}
+                                                </div>
+                                            {% endfor %}
+                                        {% endif %}
                                     </div>
                                 </div>
                                 <div class="form-row">
@@ -74,6 +111,13 @@
                                         <textarea class="form__input form__input--2 form__input--textarea"
                                                   id="orderNotes" name="order_note"
                                                   placeholder="اگر یادداشتی دارید در اینجا وارد کنید. در غیر این صورت این مکان را خالی بگذارید"></textarea>
+                                         {% if form.errors %}
+                                            {% for message in form.order_note.errors %}
+                                                <div class="alert alert-danger" role="alert">
+                                                    {{ message }}
+                                                </div>
+                                            {% endfor %}
+                                        {% endif %}
                                     </div>
                                 </div>
                                 <button class="btn" type="submit">{% trans 'send' %}</button>
