--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -10,13 +10,7 @@
 {% endblock page_title %}
 
 {% block content %}
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}" role="alert">
-                {{ message }}
-            </div>
-        {% endfor %}
-    {% endif %}
+
     <!-- Main Content Wrapper Start -->
     <div class="main-content-wrapper">
 
@@ -83,7 +77,7 @@
                                                     </td>
                                                     <td class="product-total-price">
                                                             <span class="product-price-wrapper">
-                                                                <span class="money">{{ item.total_price|intcomma:False|trans_to_persian }} {% trans '$' %}</span>
+                                                                <span class="money">{{ item.total_price|trans_to_persian|intcomma:False }} {% trans '$' %}</span>
                                                             </span>
                                                     </td>
                                                 </tr>
@@ -99,11 +93,13 @@
                             </div>
 
                         </div>
+                    {% if cart %}
                         <div class="row no-gutters border-top pt--20 mt--20">
                             <div class="col-sm-6 text-sm-right">
-                                <button type="submit" class="cart-form__btn">خالی کردن سبد خرید</button>
+                                <a href="{% url 'cart:cart_clear' %}"><button type="submit" class="cart-form__btn">خالی کردن سبد خرید</button></a>
                             </div>
                         </div>
+                    {% endif %}
                     </div>
                     <div class="col-lg-4">
                         <div class="cart-collaterals">
@@ -124,13 +120,13 @@
                                         </div>
                                         <div class="cart-calculator__item--value">
                                                 <span class="product-price-wrapper">
-                                                    <span class="money">{{ cart.get_total_price|intcomma:False|trans_to_persian }} {% trans '$' %}</span>
+                                                    <span class="money">{{ cart.get_total_price|intcomma:False }} {% trans '$' %}</span>
                                                 </span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <a href="checkout.html" class="btn btn-fullwidth btn-bg-red btn-color-white btn-hover-2">
+                            <a href="{% url 'order:order_create' %}" class="btn btn-fullwidth btn-bg-red btn-color-white btn-hover-2">
                                 ثبت سفارش
                             </a>
                         </div>
