--- a/orders/templates/orders/order_create.html
+++ b/orders/templates/orders/order_create.html
@@ -145,7 +145,7 @@
                                     <tfoot>
                                     <tr class="cart-subtotal">
                                         <th>مجموع</th>
-                                        <td class="text-right">{{ cart.get_total_price|intcomma:False|trans_to_persian }} تومان</td>
+                                        <td class="text-right">{{ cart.get_total_price|intcomma:False }} تومان</td>
                                     </tr>
                                     </tfoot>
                                 </table>
