--- a/templates/_base.html
+++ b/templates/_base.html
@@ -2,6 +2,8 @@
 <html  class="no-js"><!--------Theme Shered by Codingyar.com--------->
 {% load static %}
 {% load i18n %}
+{% load humanize %}
+{% load persian_translation_tags %}
 
 <head>
     <meta charset="utf-8">
@@ -131,6 +133,15 @@
             </div>
         </header>
         <!-- Header End -->
+        <div class="container">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }}" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        </div>
 
 
         <!-- Footer Sta
@@ -170,7 +181,7 @@
                                             </a>
                                         </span>
                                         <span class="mini-cart__product__quantity">
-                                            <span>{{ item.product_obj.price }} {% trans '$' %}</span> &#215; <span>{{ item.quantity }}</span>
+                                            <span>{{ item.product_obj.price|intcomma:False }} {% trans '$' %}</span> &#215; <span>{{ item.quantity }}</span>
                                         </span>
                                     </div>
                                 </li>
@@ -180,11 +191,13 @@
                         </ul>
                         <div class="mini-cart__total">
                             <span>{% trans 'total price' %}</span>
-                            <span class="ammount">{{ cart.get_total_price }} {% trans '$' %}</span>
+                            <span class="ammount">{{ cart.get_total_price|intcomma:False }} {% trans '$' %}</span>
                         </div>
                         <div class="mini-cart__buttons">
                             <a href="{% url 'cart:cart_detail' %}" class="btn btn-fullwidth btn-bg-sand mb--20">{% trans 'view cart' %}</a>
-                            <a href="{% url 'order:order_create'  %}" class="btn btn-fullwidth btn-bg-sand">{% trans 'pay' %}</a>
+                            {% if cart %}
+                                <a href="{% url 'order:order_create'  %}" class="btn btn-fullwidth btn-bg-sand">{% trans 'pay' %}</a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
