--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -1,6 +1,5 @@
 {% extends '_base.html' %}
 {% load i18n %}
-{% load persian_translation_tags %}
 {% load humanize %}
 
 
@@ -58,7 +57,7 @@
                                                         <a href="{{ product.get_absolute_url }}">{{ product.title }}</a>
                                                     </h3>
                                                     <div class="product-price-wrapper mb--30">
-                                                        <span class="money text-success"> {{ product.price|intcomma:False|trans_to_persian }} {% trans '$' %}</span>
+                                                        <span class="money text-success"> {{ product.price|intcomma:False }} {% trans '$' %}</span>
                                                     </div>
                                                     <form action="{% url 'cart:cart_add' product.id %}" method="POST">
                                                         {% csrf_token %}
